Adding under construction sections

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,12 +31,25 @@
                   end   
                   %> 
                   / 
-                  <a href="">Discover</a> 
+                  <%=
+                  if user_signed_in?
+                    link_to "Discover", home_path('coming_soon')
+                  else
+                    link_to "Discover", home_path('coming_soon')
+                  end
+                  %>
                   / 
-                  <a href="">Develop</a>
+                  <%=
+                  if user_signed_in?
+                    link_to "Develop", home_path('coming_soon')
+                  else
+                    link_to "Develop", home_path('coming_soon')
+                  end
+                  %>
                 </div>
                 <div id="icons">
                   <% if user_signed_in? %>
+                    <%= link_to "Settings", edit_user_registration_path  %> |
                     <%= link_to "Logout", destroy_user_session_path %>
                   <% else %>
                     <%= link_to "Login", new_user_session_path %> | <%= link_to "Sign Up", new_user_registration_path  %>
