Added coming soon to business, application, and entertainment links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,9 +64,9 @@
         <div id="clearall"></div>
         <div id="content_container">
             <ul id="nav">
-              <li><a href="">Business</a></li>
-                <li><a href="">Application</a></li>
-                <li><a href="">Entertainment</a></li>
+              <li><%= link_to "Business", home_path('coming_soon') %></li>
+                <li><%= link_to "Application", home_path('coming_soon') %></li>
+                <li><%= link_to "Entertainment", home_path('coming_soon') %></li>
             </ul>
             <div id="search">
                 <form method="post" action="">
