--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Inspirovation - idea curation</title>
+        <title>Inspirovation - idea curation and repository</title>
         <%= stylesheet_link_tag :all %>
         <%= javascript_include_tag :defaults %>
         <%= csrf_meta_tag %>
