--- a/app/views/milestones/new.html.erb
+++ b/app/views/milestones/new.html.erb
@@ -1,5 +1,5 @@
 <div id="f_ideas">
-	<%= link_to 'Back', milestones_path %>
-	<h1>New milestone</h1>
+	<%= link_to 'Return to Idea', idea_path(@idea) %>
+	<h1>New Milestone</h1>
 	<%= render 'form' %>
 </div>
