--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -1,7 +1,6 @@
 <div id="f_ideas">
-	<%= link_to 'Show', @milestone %> |
-	<%= link_to 'Back', milestones_path %>
-	<h1>Editing milestone</h1>
+	<%= link_to 'Return to Idea', idea_path(@idea) %>
+	<h1>Edit Milestone</h1>
 	
 	<%= render 'form' %>
 </div>
