MVCing the code up

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -13,31 +13,21 @@
     </div>
   <% end %>
 
-  <% 
-  if params[:idea_id] 
-    idea_id = params[:idea_id]
-  else
-    idea_id = @question.idea.id
-  end
-  
-  idea = Idea.find(idea_id)
-  %> 
-
-  <%  if idea.user.id != current_user.id  %>
+  <%  if @idea.user.id != current_user.id  %>
     <div class="field" id="question">
       <%= f.label :title, "Question" %><br />
       <%= f.text_area :title %>
     </div>    
   <% end %>  
   
-  <%  if idea.user.id == current_user.id  %>
+  <%  if @idea.user.id == current_user.id  %>
     <div class="field" id="answer">
       <%= f.label :answer %><br />
       <%= f.text_area :answer %>
     </div>
   <% end %>
   
-  <%= f.hidden_field :idea_id, :value => idea_id %>
+  <%= f.hidden_field :idea_id, :value => @idea %>
 
   <div class="clear"></div>
   <div class="actions">
