--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -107,14 +107,19 @@
             </li>       
         <% end %>
         <% if questions.empty? %>
-          No questions yet, start us off by <a href="/questions/new/<%= @idea.id %>">asking one</a>.
+          No questions yet
+          <%  if @idea.user.id != current_user.id  %>
+          , start us off by <a href="/questions/new/<%= @idea.id %>">asking one</a>.
+          <% end %>
         <% end %>
       </ul>
-      <div class="f_actions">
-        <%= link_to new_question_path(@idea.id) do  %> 
-          <img src='/images/ico_register.png' /> Post Question
-        <% end %>
-      </div>
+      <%  if @idea.user.id != current_user.id  %>
+        <div class="f_actions">
+          <%= link_to new_question_path(@idea.id) do  %> 
+            <img src='/images/ico_register.png' /> Post Question
+          <% end %>
+        </div>
+      <% end %>
     </div>
   
     <div class="clear"></div>
