--- a/app/views/subideas/_form.html.erb
+++ b/app/views/subideas/_form.html.erb
@@ -20,26 +20,13 @@
       <%= f.label :summary %><br />
       <%= f.text_area :summary, :id => "idea_summary" %>
     </div>
-    <%
-    # parse fields and spit into hidden
-    if params[:extra] != nil
-      p = params[:extra]
-      idea_id = p[4,255]
-      ico_type = p[0]
-      cellw = p[1]
-      cellh = p[2]
-      dir = p[3]
-    else
-      idea_id = @subidea.idea.id
-    end
-    %>
-    <%= f.hidden_field :idea_id, :value => idea_id %>
+    <%= f.hidden_field :idea_id, :value => @idea.id %>
     <%= f.hidden_field :parent_id, :value => params[:parent_id] %>
-    <input type="hidden" name="ico_type" value="<%= ico_type %>" />
-    <input type="hidden" name="cellw" value="<%= cellw %>" />
-    <input type="hidden" name="cellh" value="<%= cellh %>" />
-    <input type="hidden" name="dir" value="<%= dir %>" />
-    <input type="hidden" name="extra" value="<%= p %>" />
+    <input type="hidden" name="ico_type" value="<%= @ico_type %>" />
+    <input type="hidden" name="cellw" value="<%= @cellw %>" />
+    <input type="hidden" name="cellh" value="<%= @cellh %>" />
+    <input type="hidden" name="dir" value="<%= @dir %>" />
+    <input type="hidden" name="extra" value="<%= @p %>" />
     
     <div class="clear"></div>
     <div class="actions">
