Forgot the div for the new milestone link

--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -50,7 +50,7 @@
       <% end %>
       
       <% if current_user.id == @idea.user.id %>
-      	<%= link_to 'New Milestone', new_milestone_path(@idea) %>
+      	<div><%= link_to 'New Milestone', new_milestone_path(@idea) %></div>
       <% end %>
       
     </div>
