Fixing questions area

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -27,7 +27,7 @@
     </div>
   <% end %>
   
-  <%= f.hidden_field :idea_id, :value => @idea %>
+  <%= f.hidden_field :idea_id, :value => @idea.id %>
 
   <div class="clear"></div>
   <div class="actions">
